Added demo test and buildspec

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "MEAN stack sample application, Angularjs, mongodb, express, nodejs",
   "main": "app.js",
   "scripts": {
-    "start": "node app"
+    "start": "node app",
+    "test": "mocha"
   },
   "author": "Sharjeel Zuabir",
   "license": "ISC",
@@ -14,6 +15,7 @@
     "express": "^4.16.4",
     "grunt": "^1.0.3",
     "http-errors": "^1.7.1",
+    "mocha": "^5.2.0",
     "mongoose": "^5.4.2",
     "mysql": "^2.16.0"
   },
